--- a/CoreAnimationTechniques/CoreAnimationTechniques/Base.lproj/Main.storyboard
+++ b/CoreAnimationTechniques/CoreAnimationTechniques/Base.lproj/Main.storyboard
@@ -21,58 +21,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Sl-4F-1yq">
-                                <rect key="frame" x="128" y="0.0" width="398" height="375"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="85C-YI-cN9">
+                                <rect key="frame" x="212" y="69" width="242" height="236"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T7C-AS-QOI" userLabel="Hour1">
-                                        <rect key="frame" x="0.0" y="135" width="54" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="liw-bX-Z5w" userLabel="Hour2">
-                                        <rect key="frame" x="54" y="135" width="54" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lZB-EO-Pqc" userLabel="Second1">
-                                        <rect key="frame" x="290" y="135" width="54" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8fj-dO-deY" userLabel="Second2">
-                                        <rect key="frame" x="344" y="135" width="54" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VWa-d6-CeT" userLabel="Minute1">
-                                        <rect key="frame" x="145" y="135" width="54" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7es-Rq-RZ1" userLabel="Minute2">
-                                        <rect key="frame" x="199" y="135" width="54" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </view>
-                                </subviews>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.48627450979999998" green="0.4823529412" blue="0.4823529412" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.48627450979999998" green="0.4823529412" blue="0.4823529412" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
-                        <outletCollection property="digitViews" destination="T7C-AS-QOI" id="ygB-dX-ijC"/>
-                        <outletCollection property="digitViews" destination="liw-bX-Z5w" id="ge3-p7-p15"/>
-                        <outletCollection property="digitViews" destination="VWa-d6-CeT" id="HRw-wU-e4M"/>
-                        <outletCollection property="digitViews" destination="7es-Rq-RZ1" id="aoa-Sy-mdQ"/>
-                        <outletCollection property="digitViews" destination="lZB-EO-Pqc" id="Rlc-VB-OxP"/>
-                        <outletCollection property="digitViews" destination="8fj-dO-deY" id="bL0-xk-qQQ"/>
+                        <outlet property="containerView" destination="85C-YI-cN9" id="84z-xT-ijY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-228" y="57"/>
+            <point key="canvasLocation" x="-228.03598200899552" y="56.799999999999997"/>
         </scene>
     </scenes>
 </document>
