two cube with CATransformLayer

--- a/CoreAnimationTechniques/CoreAnimationTechniques/Base.lproj/Main.storyboard
+++ b/CoreAnimationTechniques/CoreAnimationTechniques/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="85C-YI-cN9">
-                                <rect key="frame" x="183" y="37" width="300" height="300"/>
+                                <rect key="frame" x="98" y="37" width="470" height="300"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -30,7 +30,7 @@
                         <color key="backgroundColor" red="0.48627450979999998" green="0.4823529412" blue="0.4823529412" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
-                        <outlet property="containerView" destination="85C-YI-cN9" id="84z-xT-ijY"/>
+                        <outlet property="containerView" destination="85C-YI-cN9" id="Bbn-45-J98"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
