--- a/CoreAnimationTechniques/CoreAnimationTechniques/Base.lproj/Main.storyboard
+++ b/CoreAnimationTechniques/CoreAnimationTechniques/Base.lproj/Main.storyboard
@@ -21,26 +21,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4qx-lI-GIP" customClass="CATEReflectionView">
-                                <rect key="frame" x="372" y="20" width="240" height="200"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ygr-qC-kNf">
+                                <rect key="frame" x="172" y="52" width="322" height="270"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_k1" translatesAutoresizingMaskIntoConstraints="NO" id="RUh-AG-fZB">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="200"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.078431372550000003" green="0.070588235289999995" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="E5F-vU-O2o">
-                                <rect key="frame" x="77" y="92" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </scrollView>
                         </subviews>
-                        <color key="backgroundColor" red="0.48627450979999998" green="0.4823529412" blue="0.4823529412" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.078431372550000003" green="0.070588235289999995" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
-                        <outlet property="scrollView" destination="E5F-vU-O2o" id="osH-Om-MB5"/>
+                        <outlet property="glView" destination="Ygr-qC-kNf" id="70B-Qb-iPz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -48,7 +38,4 @@
             <point key="canvasLocation" x="-228.03598200899552" y="56.799999999999997"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="IMG_k1" width="89" height="120"/>
-    </resources>
 </document>
